--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-teams></app-teams>
+<ul>
+  <li routerLink="">Home</li>
+  <li routerLink="/teams">Teams</li>
+  <li routerLink="/players">Players</li>
+  <li routerLink="/teams/:id">Home</li>
+</ul>
+
+<router-outlet></router-outlet>
