--- a/src/app/views/view-teams-league/view-teams-league.component.html
+++ b/src/app/views/view-teams-league/view-teams-league.component.html
@@ -1,4 +1,4 @@
-<p>teams works!</p>
+<p>view-teams-league works!</p>
 <div *ngFor="let team of teams">
   <img [src]="team['Logo del Equipo']" alt="" />
   <div>
