--- a/src/app/players/players.component.html
+++ b/src/app/players/players.component.html
@@ -1,5 +1,5 @@
 <p>players works!</p>
-<div *ngFor="let player of players">
+<div *ngFor="let player of players" routerLink="/player/{{ player.id }}">
   <img [src]="player.Avatar" alt="" />
   <div>{{ player["Nombre del Jugador"] }}</div>
 </div>
