styling wip global styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
-<ul>
-  <li routerLink="">Home</li>
-  <li routerLink="/teams">Teams</li>
-  <li routerLink="/players">Players</li>
-  <li routerLink="/teams/:id">Home</li>
-</ul>
-
+<p-tabMenu [model]="items"> </p-tabMenu>
 <router-outlet></router-outlet>
