--- a/src/app/create-team/create-team.component.html
+++ b/src/app/create-team/create-team.component.html
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div>
-    <label for="lastname6">Selecciona el equipo</label>
+    <label for="lastname6">Selecciona la liga</label>
     <select [(ngModel)]="leagueName" name="Selecciona el equipo" id="">
       <option
         *ngFor="let league of leagues"
