--- a/src/app/views/view-player/view-player.component.html
+++ b/src/app/views/view-player/view-player.component.html
@@ -41,5 +41,7 @@
     </div>
     <p></p>
     <p-button label="Guardar" (click)="editPlayer()"></p-button>
+    <p></p>
+    <p-button label="Borrar" (click)="deletePlayer()" routerLink="/"></p-button>
   </p-card>
 </div>
