--- a/src/app/views/view-team/view-team.component.html
+++ b/src/app/views/view-team/view-team.component.html
@@ -16,7 +16,7 @@
       ></p-button>
     </ng-template>
   </p-card>
-  <p-card header="Editar Jugador" styleClass="p-card-shadow">
+  <p-card header="Editar Equipo" styleClass="p-card-shadow">
     <div class="input">
       <label for="firstname6">Nombre</label>
       <input
