--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,39 @@
 <p-tabMenu [model]="items"> </p-tabMenu>
+<p></p>
+<!-- <div class="container">
+  <div class="p-col-12 p-md-4">
+    <div class="p-inputgroup">
+      <button
+        type="button"
+        routerLink="query/{{ nameQuery }}"
+        pButton
+        pRipple
+        label="Buscar"
+      ></button>
+      <input
+        type="text"
+        pInputText
+        [(ngModel)]="nameQuery"
+        placeholder="Buscar por nombre de jugador"
+      />
+    </div>
+  </div>
+  <div class="p-col-12 p-md-4">
+    <div class="p-inputgroup">
+      <button
+        type="button"
+        routerLink="querybyteam/{{ teamQuery }}"
+        pButton
+        pRipple
+        label="Buscar"
+      ></button>
+      <input
+        type="text"
+        pInputText
+        [(ngModel)]="teamQuery"
+        placeholder="Buscar por nombre del equipo"
+      />
+    </div>
+  </div>
+</div> -->
 <router-outlet></router-outlet>
