--- a/src/app/query-players-by-team/query-players-by-team.component.html
+++ b/src/app/query-players-by-team/query-players-by-team.component.html
@@ -1,4 +1,4 @@
-<h1>Jugadores del equipo</h1>
+<h1>Jugadores encontrados</h1>
 <div *ngIf="error == true">
   <p-message severity="error" text="Equipo no encontrado"></p-message>
 </div>
